[package]
name = "geomorph"
version = "0.2.0"
authors = ["Victor Lopez <vhrlopes@gmail.com>"]
description = "Simple conversion between different coordinate systems"
readme = "README.md"
license = "MIT"
repository = "https://github.com/vlopes11/geomorph"
keywords = ["geo", "geospatial", "coordinates", "geospatial", "transforms", "transformations"]

[dependencies]
