[package]
name = "geomorph"
edition = "2018"
version = "1.1.0"
authors = ["Victor Lopez <vhrlopes@gmail.com>"]
description = "Simple conversion between different coordinate systems"
readme = "README.md"
license = "MIT"
repository = "https://github.com/vlopes11/geomorph"
keywords = ["geo", "geospatial", "coordinates", "transforms", "transformations"]

[badges]
travis-ci = { repository = "vlopes11/geomorph" }

[dependencies]
num-complex = "0.2"
thiserror = "1"
